# DeepBlue

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  build.gitignore  build.ninja  cmake_install.cmake  compile_commands.json  main.cpp
.cmake/api/v1/reply/: codemodel-v2-0e1014c8f9cab62b4c21.json  codemodel-v2-da2ddc6809a1a242e50a.json  index-2024-08-02T12-12-06-0234.json  target-DeepBlue-Debug-8536e71a506923abc2ee.json
data/: config.txt  save.txt  stage1.csv  stage_layout.csv
include/: audio.h  block.h  camera.h  collision.h  config.h  editor.h  effect.h  enemy.h  file_handler.h  input.h  object2d.h  player.h  projectile.h  renderer.h  scene.h  stage.h
res/Stage 7/: block_layer.csv
res/Stages/Stage 1/: block_layer.csv  front_layer.csv  moving_layer.csv  normal_layer.csv
res/Stages/Stage 1/background/: param.txt
res/Stages/Stage 1/backup/: front_layer.csv  moving_layer.csv  normal_layer.csv
res/Stages/Stage 2/: block_layer copy.csv  block_layer.csv  front_layer.csv  moving_layer.csv  normal_layer.csv
res/Stages/Stage 2/background/: param.txt
res/Stages/Stage 2/backup/: front_layer.csv  moving_layer.csv  normal_layer.csv
res/Stages/Stage 4/: back_layer.csv  block_layer.csv  front_layer.csv  normal_layer.csv
res/Stages/Stage 4/background/: param.txt
res/Stages/Stage 6/: block_layer.csv
res/Stages/Stage 6/background/: param.txt
src/: audio.cpp  block.cpp  camera.cpp  collision.cpp  config.cpp  editor.cpp  enemy.cpp  file_handler.cpp  input.cpp  object2d.cpp  player.cpp  projectile.cpp  renderer.cpp  scene.cpp  stage.cpp
